k8s/coma/apps/teleport-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport
  namespace: teleport-cluster
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "teleport.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: teleport-cluster
                port:
                  number: 443
    - host: "*.teleport.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: teleport-cluster
                port:
                  number: 443
  tls:
    - hosts:
        - "teleport.artichoke.cc"
        - "*.teleport.artichoke.cc"
      secretName: artichokecc-cert
