k8s/coma/apps/teleport-cluster/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport
  namespace: teleport-cluster
  annotations:
    # traefik.ingress.kubernetes.io/router.insecureSkipVerify: 'true'
    # traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.insecureSkipVerify: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: >-
        Host(`teleport.artichoke.cc`) || Host(`*.teleport.artichoke.cc`)
      services:
        - name: teleport-cluster
          port: 443
          scheme: https
          serversTransport: skip-tls
  tls:
    secretName: teleport-certs
