k8s/coma/apps/teleport-cluster/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: teleport
  namespace: teleport-cluster
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-teleport
  hostnames:
    - teleport.artichoke.cc
  rules:
    - backendRefs:
        - name: teleport-cluster
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: teleport-wildcard
  namespace: teleport-cluster
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-teleport-wildcard
  hostnames:
    - "*.teleport.artichoke.cc"
  rules:
    - backendRefs:
        - name: teleport-cluster
          port: 443
